alignment issues on 'about' page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -109,7 +109,6 @@ li {
 }
 
 #about_page p {
-  padding-top: 15px;
   font-size: 24px !important;
 }
 
